@@ -6,12 +6,21 @@ Bugfixes
 - Fix issue with changing Label positions by fractional values.
 - Avoid performance issue due to unnecessary context switching with single Window programs.
 - Fix crash on Player.next_source when playing a video with no audio track.
+- Fix crash when disconnecting a Joystick on Windows.
+- Prevent media Players from seeking to negative timestamps.
+- Fix OpenAL audio driver not dispatching events.
 
 Changes
 --------
 - text.TextLayouts are no longer bound to int positioning.
 - Raise exception if attempting to import from legacy Python.
 - Add GStreamer decoder for compressed audio on Linux.
+- Add Windows Media Foundation decoder for compressed audio on Windows.
+
+Improvements
+------------
+- New "file_drops" Window argument to allow drag and drop of files. This is complimented
+  by a new `Window.on_file_drop` event, which returns the mouse position and file path.
 
 
 pyglet 1.5.0
